# chatbot-evals

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: README.md  auto-dream.md  backend-engineer.md  data-engineer.md  dream-log.md  eval-researcher.md  frontend-engineer.md  functional-qa.md  infra-engineer.md  literature-reviewer.md  ml-researcher.md  monitor.md  orchestrator.md  performance-qa.md  product-manager.md  security-qa.md
agents/: base_agent.py  message_bus.py  orchestrator.py  state.py
agents/engineering/: __init__.py  backend_agent.py  code_generator.py  data_agent.py  frontend_agent.py  infra_agent.py  prompts.py
agents/monitor/: agent.py  prompts.py
agents/pm/: __init__.py  agent.py  backlog.py  prompts.py  story_generator.py
agents/qa/: __init__.py  bug_reporter.py  functional_qa.py  (+3 more)
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  INTEGRATIONS.md  METRICS.md
evalplatform/: __init__.py
frontend/: Dockerfile  package.json  tailwind.config.js
scripts/: demo.py  run_agents.py  seed_data.py
sdk/: README.md  pyproject.toml
sdk/chatbot_evals/: __init__.py  callbacks.py  client.py  config.py  decorators.py  evaluate.py  models.py  types.py
sdk/chatbot_evals/datasets/: __init__.py  loaders.py  samplers.py
sdk/chatbot_evals/integrations/: __init__.py  anthropic_wrapper.py  langchain_callback.py  openai_wrapper.py
sdk/chatbot_evals/metrics/: __init__.py  custom.py
sdk/chatbot_evals/tracing/: __init__.py  tracer.py
sdk/examples/: advanced.py  openai_integration.py  quickstart.py
(+109 files in other folders)
